--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="welcome_to">Welcome To</string>
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
+    <string name="register">Register</string>
 </resources>
